	- can't step after bkpt: fixed.
	- mem dbox: show headers, removed stack, refreshed on step, tab refreshed when scrolling,
	- mem_dbox:	improved scrolling and browsing
	- step over was buggy (no single step on insts other than jsr/bsr)
	- code_dbox: improved scrolling and browsing
	- avoid selection and green bar to be masked

- 14/07/2004, version 1.74: roms
	Fixes from Lionel, Kevin and Olivier's suggestions:
	- when scrolling down in the code window, the bar is now reset 
	(hide first instruction).
	- reject some SAV images due to IMG_INFO structure (memcmp)
	- improved popup menu (slow down)
	- popup menu available when debugger is opened
	- rebuilt under Linux
	- fixed bug with SDCB in the VTi's disassembler
	- modified VTi's disasm to show F-Line ROM calls
	- completely rewritten debugging layer and added Step Out mode

- 12/07/2004, version 1.73: roms
	SDL removed for GTK: screen and keyboard support rewritten from 
	scratch !
	Debugger raised on event from m68k thread: less CPU intensive but 
	could be better.
	HW1 protection is emulated excepted for archive memory limit.

- 07/07/2004, version 1.72: roms
	Error management connected and updated.
	Fixed 'restrict to current speed'.
	Synch item disabled for now.
	Fixed bugs in state image loading as well as in LCD initialization 
		(no LCD updates after state image loading).
	Linkport reworked but seems to be buggy with HW2 ?!
	Fixed IMG_INFO structure: size was incorrect.
	Added new field to IMG_INFO: ROM base address.
	Navigate with arrow keys in the mem dbox.
	Save of breakpoints in the state image.
	Fixed code breakpoint which was buggy.
	Added symbolic debugger (replace address by name; take a look at 0x4f89fe on TI92+).

- 30/06/2004, version 1.71: roms
	Lionel Debroux's suggestions:
	- debugger access is slow: improved by pre-loading windows.
	- can't scroll into the code window: fixed (VTi uses a fixed size list without scrollers)
	- window focus: fixed (list of the code window has default focus)