@@ -15,6 +15,8 @@ To do:
 	- step over was buggy (no single step on insts other than jsr/bsr)
 	- code_dbox: improved scrolling and browsing
 	- avoid selection and green bar to be masked
+	- dbg_code: can add mem tab at address
+	- mem_code: can disasm at address and added popup menu
 
 - 14/07/2004, version 1.74: roms
 	Fixes from Lionel, Kevin and Olivier's suggestions:
